<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <include layout="@layout/lay_adptive_banner_ad" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:gravity="center"
                app:cardBackgroundColor="@color/help_bg_color"
                app:cardCornerRadius="@dimen/_15sdp"
                app:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_10sdp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/help1"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_100sdp"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:layout_marginBottom="@dimen/_20sdp"
                            tools:src="@drawable/help_1" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginRight="@dimen/_5sdp"
                            android:gravity="center"
                            android:orientation="horizontal">


                            <TextView
                                android:id="@+id/textView1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/_10sdp"
                                android:gravity="center"
                                android:text="@string/step_1"
                                android:textColor="@color/help_text_color"
                                android:textSize="@dimen/_16sdp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_5sdp"
                            android:gravity="center"
                            android:paddingBottom="@dimen/_20sdp"
                            android:text="@string/first_step"
                            android:textColor="@color/help_text_color"
                            android:textSize="@dimen/_14sdp" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/help2"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_180sdp"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:layout_marginBottom="@dimen/_20sdp"
                            tools:src="@drawable/help_2" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginRight="@dimen/_5sdp"
                            android:gravity="center"
                            android:orientation="horizontal">


                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/_10sdp"
                                android:gravity="center"
                                android:text="@string/step_2"
                                android:textColor="@color/help_text_color"
                                android:textSize="@dimen/_16sdp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_5sdp"
                            android:gravity="center"
                            android:paddingBottom="@dimen/_20sdp"
                            android:text="@string/second_step"
                            android:textColor="@color/help_text_color"
                            android:textSize="@dimen/_14sdp" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/help3"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_180sdp"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:layout_marginBottom="@dimen/_20sdp"
                            tools:src="@drawable/help_3" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginRight="@dimen/_5sdp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView5"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/_10sdp"
                                android:gravity="center"
                                android:text="@string/step_3"
                                android:textColor="@color/help_text_color"
                                android:textSize="@dimen/_16sdp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_margin="@dimen/_5sdp"
                            android:gravity="center"
                            android:paddingBottom="@dimen/_20sdp"
                            android:text="@string/step_three"
                            android:textColor="@color/help_text_color"
                            android:textSize="@dimen/_14sdp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
